[package]
name = "spearbit-take-home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0.151", features = ["derive"] }
axum = { version = "0.6.1", features = ["ws"] }
ethers = { version = "1.0.2" }
ethers-providers = { version = "1.0.2" }
dotenv = "0.15.0"
primitive-types = "0.12.1"
u256-literal = "1.2.0"
eyre = "0.6.8"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-async-std-native-tls"] }
